[gd_scene load_steps=40 format=3 uid="uid://tgk8gnfdri4a"]

[ext_resource type="Script" path="res://objects/Enemys/blob/blob.gd" id="1_ckgri"]
[ext_resource type="Script" path="res://objects/hurtbox.gd" id="2_h6ciw"]
[ext_resource type="Texture2D" uid="uid://b1atfphlheuyw" path="res://assets/enemies/blob try 3 spritesheet.png" id="2_jes58"]
[ext_resource type="Texture2D" uid="uid://dci3v73nppluu" path="res://assets/enemies/blob attack atempt 1.png" id="2_k3v14"]
[ext_resource type="Texture2D" uid="uid://c4dx0ulyrv13o" path="res://assets/enemies/blob death.png" id="3_dwrqc"]
[ext_resource type="Script" path="res://objects/Enemys/states/State Machine.gd" id="3_euwad"]
[ext_resource type="Script" path="res://objects/Enemys/blob/states/blob_pathfind.gd" id="4_onm1h"]
[ext_resource type="Script" path="res://objects/Enemys/blob/states/blob_knockback.gd" id="5_trb5e"]
[ext_resource type="AudioStream" uid="uid://chsxpky1cple1" path="res://assets/Not ours/sound/blob/slime hurt.mp3" id="6_g6n60"]
[ext_resource type="Script" path="res://objects/Enemys/blob/states/blob_idle.gd" id="6_vu8to"]
[ext_resource type="AudioStream" uid="uid://dl4h6u4cl4c1g" path="res://assets/Not ours/sound/blob/splat.mp3" id="10_bgcky"]
[ext_resource type="Script" path="res://objects/Enemys/blob/walk.gd" id="11_ey8g5"]
[ext_resource type="AudioStream" uid="uid://fsd6kb015w77" path="res://assets/Not ours/sound/blob/soft parry.mp3" id="13_md88d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vn760"]
atlas = ExtResource("2_k3v14")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j0wf"]
atlas = ExtResource("2_k3v14")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgyqk"]
atlas = ExtResource("2_k3v14")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6brd5"]
atlas = ExtResource("2_k3v14")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1m47e"]
atlas = ExtResource("2_k3v14")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_24df5"]
atlas = ExtResource("3_dwrqc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwnio"]
atlas = ExtResource("3_dwrqc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0ip8"]
atlas = ExtResource("3_dwrqc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft0pc"]
atlas = ExtResource("3_dwrqc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d2dj"]
atlas = ExtResource("3_dwrqc")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hroyu"]
atlas = ExtResource("3_dwrqc")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_td3ih"]
atlas = ExtResource("3_dwrqc")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnsjx"]
atlas = ExtResource("2_jes58")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t61n"]
atlas = ExtResource("2_jes58")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmrr8"]
atlas = ExtResource("2_jes58")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynsut"]
atlas = ExtResource("2_jes58")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cpw1v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn760")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j0wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgyqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6brd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1m47e")
}],
"loop": true,
"name": &"bounce",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_24df5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwnio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0ip8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft0pc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d2dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hroyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td3ih")
}],
"loop": false,
"name": &"die_basis",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnsjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t61n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmrr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynsut")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}]

[sub_resource type="Animation" id="Animation_pwxgg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"die_basis"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [80]
}

[sub_resource type="Animation" id="Animation_8ex3m"]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"die_basis"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.225663),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [80, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8baxo"]
_data = {
"RESET": SubResource("Animation_pwxgg"),
"die": SubResource("Animation_8ex3m")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8dak5"]
radius = 7.0
height = 20.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_yx5ly"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("6_g6n60")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4lehj"]
radius = 7.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hn5bs"]
radius = 6.0
height = 18.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_52ymu"]
random_pitch = 1.25
streams_count = 1
stream_0/stream = ExtResource("10_bgcky")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_y048n"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("13_md88d")

[node name="blob" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
motion_mode = 1
script = ExtResource("1_ckgri")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cpw1v")
animation = &"die_basis"
autoplay = "bounce"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_8baxo")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
avoidance_enabled = true
radius = 32.0
avoidance_layers = 2
avoidance_mask = 2

[node name="hurtbox" type="Area2D" parent="." groups=["hurtbox"]]
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource("2_h6ciw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8dak5")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="hurtbox"]
stream = SubResource("AudioStreamRandomizer_yx5ly")
volume_db = -15.0
pitch_scale = 0.8

[node name="attack" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4lehj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hn5bs")

[node name="attack_cooldown" type="Timer" parent="."]
one_shot = true

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "knockback")]
script = ExtResource("3_euwad")
initial_state = NodePath("blob_pathfind")
knockback = NodePath("blob_Knockback")

[node name="blob_pathfind" type="Node" parent="State Machine"]
script = ExtResource("4_onm1h")

[node name="blob_Knockback" type="Node" parent="State Machine"]
script = ExtResource("5_trb5e")

[node name="blob_Idle" type="Node" parent="State Machine"]
script = ExtResource("6_vu8to")

[node name="walk" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_52ymu")
autoplay = true
script = ExtResource("11_ey8g5")

[node name="parry" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_y048n")
volume_db = 5.0

[connection signal="animation_looped" from="AnimatedSprite2D" to="walk" method="_on_animated_sprite_2d_animation_looped"]
[connection signal="animation_finished" from="AnimatedSprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="attack" to="." method="_on_attack_area_entered"]
[connection signal="area_exited" from="attack" to="." method="_on_attack_area_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
